doc: rename presentation.* to lesson.*

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,5 +1,5 @@
 names := assignment0 assignment1 assignment2 assignment3 assignment4 assignment5
-names += presentation
+names += lesson
 
 pdfs := $(addsuffix .pdf,$(names))
 
