doc: rename assignment* to lab*

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,11 +1,11 @@
-names := assignment0 assignment1 assignment2 assignment3 assignment4 assignment5
+names := lab0 lab1 lab2 lab3 lab4 lab5
 names += lesson
 
 pdfs := $(addsuffix .pdf,$(names))
 
 all: ${pdfs}
 
-%.pdf: %.tex $(shell find include -name '*.tex')
+%.pdf: %.tex $(shell find include -name '*.tex' -o -name '*.bib')
 	latexmk -silent -pdf -pvc- $<
 
 clean:
